# swagger/v1/swagger.json
@@ -149,6 +149,127 @@
         }
       }
     },
+    "/v1/reservations": {
+      "post": {
+        "summary": "Creates a reservation",
+        "tags": [
+          "Reservations"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "security": [
+          {
+            "Bearer": {
+            }
+          }
+        ],
+        "parameters": [
+          {
+            "name": "reservation",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "type": "string"
+                },
+                "quantity": {
+                  "type": "string"
+                },
+                "ticket_id": {
+                  "type": "integer"
+                },
+                "selling_option": {
+                  "type": "integer"
+                }
+              },
+              "required": [
+                "email",
+                "quantity",
+                "ticket_id",
+                "selling_option"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "created"
+          },
+          "422": {
+            "description": "invalid request"
+          }
+        }
+      },
+      "get": {
+        "summary": "Retrieves reservations",
+        "tags": [
+          "Reservations"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "security": [
+          {
+            "Bearer": {
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "success"
+          }
+        }
+      }
+    },
+    "/v1/reservations/{id}": {
+      "get": {
+        "summary": "Retrieves a reservation",
+        "tags": [
+          "Reservations"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "security": [
+          {
+            "Bearer": {
+            }
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "reservation found",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "type": "string"
+                },
+                "quantity": {
+                  "type": "string"
+                },
+                "ticket_id": {
+                  "type": "integer"
+                },
+                "selling_option": {
+                  "type": "integer"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/v1/tickets": {
       "post": {
         "summary": "Creates a ticket",
@@ -210,7 +331,7 @@
         }
       },
       "get": {
-        "summary": "retrieves tickets",
+        "summary": "Retrieves tickets",
         "tags": [
           "Tickets"
         ],
@@ -226,6 +347,59 @@
         "responses": {
           "200": {
             "description": "success"
+          }
+        }
+      }
+    },
+    "/v1/tickets/{id}": {
+      "get": {
+        "summary": "Retrieves a ticket",
+        "tags": [
+          "Tickets"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "security": [
+          {
+            "Bearer": {
+            }
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "ticket found",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string"
+                },
+                "description": {
+                  "type": "string"
+                },
+                "quantity": {
+                  "type": "integer"
+                },
+                "status": {
+                  "type": "integer"
+                },
+                "price": {
+                  "type": "float"
+                },
+                "event_id": {
+                  "type": "integer"
+                }
+              }
+            }
           }
         }
       }
